Error handling & create success response
